sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  namespace: a
spec:
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
