sidecar-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1
  namespace: aha
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: app1.indiaindarkera.in
      http:
        paths:
        - path: /
          backend:
            service:
              name: nginx1
              port:
                number: 80
          pathType: Exact
